--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
   },
